@@ -84,6 +84,8 @@ Version 1.4.23 - SVN
   - Prevent session lock-up caused by filters plugin trying to move
     messages in an account that is over quota
   - Added MD5 alternative to directory hash calculation
+  - Added ability for administrator to control whether or not users
+    can edit their reply-to address ($edit_reply_to in config.php)
 
 Version 1.4.22 - 12 July 2011
 -----------------------------
